-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u85
-
Component/s: core-libs
-
b89
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8142799 | emb-9 | Sean Coffey | P3 | Resolved | Fixed | team |
| JDK-8147677 | 8u92 | Sean Coffey | P3 | Resolved | Fixed | b03 |
| JDK-8140116 | 8u72 | Sean Coffey | P3 | Resolved | Fixed | b04 |
| JDK-8134890 | 8u71 | Sean Coffey | P3 | Resolved | Fixed | b01 |
| JDK-8135217 | 8u66 | Sean Coffey | P3 | Resolved | Fixed | b13 |
| JDK-8135194 | 8u65 | Sean Coffey | P3 | Resolved | Fixed | b13 |
| JDK-8136638 | 8u60 | Sean Coffey | P3 | Resolved | Fixed | b32 |
| JDK-8135037 | 8u51 | Sean Coffey | P3 | Resolved | Fixed | interim-patch |
| JDK-8143756 | emb-8u71 | Sean Coffey | P3 | Resolved | Fixed | b01 |
| JDK-8138315 | emb-8u65 | Sean Coffey | P3 | Resolved | Fixed | b13 |
| JDK-8134894 | 7u95 | Sean Coffey | P3 | Resolved | Fixed | b01 |
| JDK-8135193 | 7u91 | Sean Coffey | P3 | Resolved | Fixed | b13 |
| JDK-8135038 | 7u85 | Sean Coffey | P3 | Resolved | Fixed | b34 |
| JDK-8134892 | 6u111 | Sean Coffey | P3 | Resolved | Fixed | b01 |
| JDK-8135192 | 6u105 | Sean Coffey | P3 | Resolved | Fixed | b14 |
Using the new system property : -Djdk.tls.trustNameService=true resolves their issue.
We need to debug why a non-IP literal address is encountering this issue.
- backported by
-
JDK-8134890 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8134892 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8134894 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8135037 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8135038 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8135192 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8135193 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8135194 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8135217 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8136638 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8137301 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8138315 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8140116 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8142799 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8143756 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
-
JDK-8147677 HTTPS hostname invalid issue with InetAddress
-
- Resolved
-
- duplicates
-
JDK-8132662 Preserving mechanism of original hostnames in SSLSocketImpl fails
-
- Closed
-
- relates to
-
JDK-8259315 CI intermittent failure of java/net/InetAddress/getOriginalHostName.java (windows-x64)
-
- Closed
-